fix: job info not disappearing on smaller screens

--- a/src/components/job/css/job.module.css
+++ b/src/components/job/css/job.module.css
@@ -5,7 +5,6 @@
 }
 
 .information {
-    display: block;
     padding: 10px 5px;
     position: sticky;
     flex-grow: 1;
